fixed overflow issue on login page

--- a/assets/linker/styles/custom.less
+++ b/assets/linker/styles/custom.less
@@ -332,7 +332,7 @@ background: url("../../images/cream-tile.png") repeat;
 
 #login-step-section {
   width: 100%;
-  height: 550px;
+  min-height: 550px;
    background: url("../../images/unsplash_macaroons.jpg");
 }
 
